Modified details based on the revision

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <!-- Logo Image (uncomment and add your logo path) -->
-               <img src="Images/removebg-preview.png" alt="ChipzWay Logo" class="h-10 w-auto mr-2"> 
+             
                 <span class="text-2xl font-bold" style="color: var(--primary-red);">ChipzWay</span>
             </div>
             <div class="hidden md:flex space-x-4">
@@ -248,7 +248,7 @@
         <div id="mobile-menu" class="fixed top-0 right-0 h-full w-64 bg-gradient-to-b from-red-600 to-red-700 shadow-2xl transform translate-x-full transition-transform duration-300 ease-in-out z-50 md:hidden">
             <!-- Close Button -->
             <div class="flex justify-between items-center p-6 border-b border-red-500">
-                <h3 class="text-white text-xl font-bold">Tofik Chipzway</h3>
+                <h3 class="text-white text-xl font-bold">Tofikk Chipzway</h3>
                 <button id="close-mobile-menu" class="text-white hover:text-red-200 transition-colors">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -363,7 +363,7 @@
                             Inspired by <span class="font-bold text-red-600">America's viral trend</span>, ChipzWay is <span class="font-bold text-blue-600">India's freshest snack concept</span> where <span class="bg-yellow-200 px-2 py-1 rounded font-bold">YOU bring your own chips</span> – and <span class="bg-red-200 px-2 py-1 rounded font-bold">WE load them with magic</span>! 
                         </p>
                         <p class="text-sm text-gray-600 italic mb-4 text-justify ">
-                            Founded by <span class="font-semibold text-gray-800">Tofik Shaikh</span>
+                            Founded by <span class="font-semibold text-gray-800">Tofikk Shaiikh</span>
                         </p>
                         <p class="text-lg leading-relaxed mb-4 text-justify ">
                             Think <span class="text-orange-600 font-semibold">tangy sauces</span>, <span class="text-green-600 font-semibold">crunchy veggies</span>, and <span class="text-red-600 font-semibold">juicy protein</span> added right into your favorite chips packet.
@@ -799,7 +799,7 @@
                                     </div>
                                     <div class="flex-1">
                                         <h4 class="font-bold text-xl text-gray-800 mb-2 group-hover:text-red-600 transition-colors">Location</h4>
-                                        <p class="text-gray-600 text-lg leading-relaxed">Kudale Colony 4, Pimprigaon<br><span class="font-semibold text-red-600">Pune, Maharashtra</span></p>
+                                        <p class="text-gray-600 text-lg leading-relaxed">Shop No 3, Sai Vastu, Seven Star Lane,<br><span class="font-semibold text-red-600"> Pimple Saudagar, Pune 411027</span></p>
                                         <div class="mt-2 text-sm text-gray-500">📍 Easy to find & accessible</div>
                                     </div>
                                 </div>
@@ -811,9 +811,9 @@
                                         ⏰
                                     </div>
                                     <div class="flex-1">
-                                        <h4 class="font-bold text-xl text-gray-800 mb-2 group-hover:text-blue-600 transition-colors">Business Hours</h4>
-                                        <p class="text-gray-600 text-lg leading-relaxed"><span class="font-semibold text-blue-600">Monday – Sunday</span><br>12:00 PM – 10:00 PM</p>
-                                        <div class="mt-2 text-sm text-gray-500">🕐 Open 7 days a week</div>
+                                        <h4 class="font-bold text-xl text-gray-800 mb-2 group-hover:text-blue-600 transition-colors">Shop timings</h4>
+                                        <p class="text-gray-600 text-lg leading-relaxed"><span class="font-semibold text-blue-600">Monday – Sunday</span><br>2:00 PM – 10:00 PM</p>
+                                        <div class="mt-2 text-sm text-gray-500">🕐Thursday’s closed </div>
                                     </div>
                                 </div>
                             </div>
